feat(api): posthog key
